--- a/sections/economy.html
+++ b/sections/economy.html
@@ -2779,7 +2779,7 @@
                                                                                                     بالقرية لحفظ الاسماك
                                                                                                 </p> <a
                                                                                                     class="give-card button-dark give-card__link"
-                                                                                                    href="../donate.html"><i
+                                                                                                    href="mrakeb.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
@@ -2890,7 +2890,7 @@
 
                                                                                                 </p>
                                                                                                 <a class="give-card button-dark give-card__link"
-                                                                                                    href="../donate.html"><i
+                                                                                                    href="mrakez.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
