--- a/sections/health.html
+++ b/sections/health.html
@@ -2611,7 +2611,7 @@
                                                                                                     من مسببات العمي...
                                                                                                 </p> <a
                                                                                                     class="give-card button-dark give-card__link"
-                                                                                                    href="../donate.html"><i
+                                                                                                    href="3enkfe3nena.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
@@ -2803,7 +2803,7 @@
                                                                                                     &hellip;
                                                                                                 </p>
                                                                                                 <a class="give-card button-dark give-card__link"
-                                                                                                    href="../donate.html"><i
+                                                                                                    href="lmasr.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
@@ -2902,7 +2902,7 @@
                                                                                                     &hellip;
                                                                                                 </p>
                                                                                                 <a class="give-card button-dark give-card__link"
-                                                                                                    href="../donate.html"><i
+                                                                                                    href="lamsa.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
@@ -3094,7 +3094,7 @@
                                                                                                     &hellip;
                                                                                                 </p>
                                                                                                 <a class="give-card button-dark give-card__link"
-                                                                                                    href="../donate.html"><i
+                                                                                                    href="kadm_sa7e7.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
