--- a/sections/7aya.html
+++ b/sections/7aya.html
@@ -2658,8 +2658,8 @@
                                                         class="value">225,000 جم</span></div>
                                                 <div class="goal"><span class="label">الهدف</span><span
                                                         class="value">200,000 جم</span></div>
-                                                <div class="donors"><span class="label">عدد المتبرعين</span><span
-                                                        class="value">3</span></div>
+                                                <div class="donors"><span class="label">سعر السهم</span><span
+                                                        class="value">1000 جم</span></div>
                                             </div>
                                         </div>
                                         <div class="sidebar-donor-wall" dir="rtl">
