--- a/sections/health.html
+++ b/sections/health.html
@@ -2765,18 +2765,16 @@
                                                                                                     <div class="income">
                                                                                                         <span
                                                                                                             class="label">خدمنا</span><span
-                                                                                                            class="value">الف
-                                                                                                            مواطن</span>
+                                                                                                            class="value">1000<br>مواطن</span>
                                                                                                     </div>
                                                                                                     <div
                                                                                                         class="percentage">
-                                                                                                        170<sup>%</sup>
+                                                                                                        100<sup>%</sup>
                                                                                                     </div>
                                                                                                     <div class="goal">
                                                                                                         <span
                                                                                                             class="label">الهدف</span><span
-                                                                                                            class="value">الف
-                                                                                                            مواطن</span>
+                                                                                                            class="value">1000<br>مواطن</span>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
@@ -2863,8 +2861,7 @@
                                                                                                     <div class="income">
                                                                                                         <span
                                                                                                             class="label">خدمنا</span><span
-                                                                                                            class="value">الف
-                                                                                                            مواطن</span>
+                                                                                                            class="value">1000<br>مواطن</span>
                                                                                                     </div>
                                                                                                     <div
                                                                                                         class="percentage">
@@ -2873,8 +2870,7 @@
                                                                                                     <div class="goal">
                                                                                                         <span
                                                                                                             class="label">الهدف</span><span
-                                                                                                            class="value">الف
-                                                                                                            مواطن</span>
+                                                                                                            class="value">1000<br>مواطن</span>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
