--- a/sections/help.html
+++ b/sections/help.html
@@ -2546,16 +2546,15 @@
                                                                                     <div class="give-grid__item">
                                                                                         <div class="give-card__progress top">
                                                                                             <div class="give-goal-progress">
-
-                                                                                                <div class="raised" style="display: inline-flex;visibility: hidden;">
+                                                                                                <div class="raised">
                                                                                                     <div class="income">
-                                                                                                        <span class="label">خدمنا</span><span class="value">1,000</span>
+                                                                                                        <span class="label">خدمنا</span><span class="value">1000<br>مواطن</span>
                                                                                                     </div>
                                                                                                     <div class="percentage">
                                                                                                         100<sup>%</sup>
                                                                                                     </div>
                                                                                                     <div class="goal">
-                                                                                                        <span class="label">الهدف</span><span class="value">1,000</span>
+                                                                                                        <span class="label">الهدف</span><span class="value">1000<br>مواطن</span>
                                                                                                     </div>
                                                                                                 </div>
                                                                                             </div>
