--- a/sections/qary-elamal.html
+++ b/sections/qary-elamal.html
@@ -2470,7 +2470,8 @@
                                             <div class="raised">
                                                 <div class="income"><span class="label">حاليا</span><span class="value">225,000 جم</span></div>
                                                 <div class="goal"><span class="label">الهدف</span><span class="value">200,000 جم</span></div>
-                                                <div class="donors"><span class="label">عدد المتبرعين</span><span class="value">3</span></div>
+                                                <div class="donors"><span class="label">قيمة السهم
+                                                </span><span class="value">2,500 جم</span></div>
                                             </div>
                                         </div>
                                         <div class="sidebar-donor-wall" dir="rtl">
