--- a/story-1.html
+++ b/story-1.html
@@ -3,6 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
+<link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <link rel='stylesheet' id='elementor-post-5155-css'
         href='/content/cache/autoptimize/css/autoptimize_single_6f3071d3e4c16388c8fca92308a8320d1b8f.css' media='all' />
