--- a/donations.html
+++ b/donations.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
+<link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
