--- a/sections/lamsa.html
+++ b/sections/lamsa.html
@@ -6,6 +6,7 @@
 <!-- /Added by HTTrack -->
 
 <head>
+<link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
