--- a/stories.html
+++ b/stories.html
@@ -6,6 +6,7 @@
 <!-- /Added by HTTrack -->
 
 <head>
+<link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <link rel='stylesheet' id='elementor-post-5155-css'
         href='/content/cache/autoptimize/css/autoptimize_single_6f3071d3e4c16388c8fca92308a8320d1b8f.css' media='all' />
