--- a/sections/mrakeb.html
+++ b/sections/mrakeb.html
@@ -6,7 +6,7 @@
 <!-- /Added by HTTrack -->
 
 <head>
-<link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
@@ -2471,7 +2471,7 @@
                                             <div class="raised">
                                                 <div class="income"><span class="label">حاليا</span><span class="value">225,000 جم</span></div>
                                                 <div class="goal"><span class="label">الهدف</span><span class="value">200,000 جم</span></div>
-                                                <div class="donors"><span class="label">عدد المتبرعين</span><span class="value">3</span></div>
+                                                <div class="donors"><span class="label">سعر السهم</span><span class="value">1500</span></div>
                                             </div>
                                         </div>
                                         <div class="sidebar-donor-wall" dir="rtl">
