--- a/sections/sona3-eltanmiy.html
+++ b/sections/sona3-eltanmiy.html
@@ -6,13 +6,13 @@
 <!-- /Added by HTTrack -->
 
 <head>
-<link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link media="all" href="../content/cache/autoptimize/css/autoptimize_f57d56937756cedd3e330e14994f8274.css" rel="stylesheet" />
     <link media="all" href="../content/cache/autoptimize/css/autoptimize_6833843cab9610a027b4332fb9d69a16.css" rel="stylesheet" />
-    <title>قطاع صناع التنمية | صناع الخير</title>
+    <title>قطاع التمكين الأقتصادي | صناع الخير</title>
     <link rel="shortcut icon" type="image/png" href="../assets/imgs/logo.png">
     <link rel='dns-prefetch' href='http://sona3elkhair.com/' />
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
@@ -2471,7 +2471,7 @@
                                             <div class="raised">
                                                 <div class="income"><span class="label">حاليا</span><span class="value">225,000 جم</span></div>
                                                 <div class="goal"><span class="label">الهدف</span><span class="value">200,000 جم</span></div>
-                                                <div class="donors"><span class="label">عدد المتبرعين</span><span class="value">3</span></div>
+                                                <div class="donors"><span class="label">سعر السهم</span><span class="value">500</span></div>
                                             </div>
                                         </div>
                                         <div class="sidebar-donor-wall" dir="rtl">
