--- a/sections/mrakez.html
+++ b/sections/mrakez.html
@@ -6,13 +6,13 @@
 <!-- /Added by HTTrack -->
 
 <head>
-<link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
     <link media="all" href="../content/cache/autoptimize/css/autoptimize_f57d56937756cedd3e330e14994f8274.css" rel="stylesheet" />
     <link media="all" href="../content/cache/autoptimize/css/autoptimize_6833843cab9610a027b4332fb9d69a16.css" rel="stylesheet" />
-    <title>قطاع التدريب و التعليم | صناع الخير</title>
+    <title>قطاع التمكين الأقتصادي | صناع الخير</title>
     <link rel="shortcut icon" type="image/png" href="../assets/imgs/logo.png">
     <link rel='dns-prefetch' href='http://sona3elkhair.com/' />
     <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
