--- a/index.html
+++ b/index.html
@@ -3603,7 +3603,7 @@
                                                                                                                                         </div>
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title">
-                                                                                                                                                <span dir="rtl"><a href="/sections/lmasr.html">مبادرة لمصر</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-4.html">مبادرة لمصر</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
 
@@ -3619,7 +3619,7 @@
                                                                                                                                         </div>
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title">
-                                                                                                                                                <span dir="rtl"><a href="/sections/lamsa.html">لمسة خير</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-3.html">لمسة خير</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
 
@@ -3635,7 +3635,7 @@
                                                                                                                                         </div>
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title" style="margin-top:5%;">
-                                                                                                                                                <span dir="rtl"><a href="/sections/kadm_sa7e7.html">مبادرة قدم صحيح</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-2.html">مبادرة قدم صحيح</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
                                                                                                                                     </div>
@@ -3651,7 +3651,7 @@
                                                                                                                                         </div>
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title" style="margin-top:5%;">
-                                                                                                                                                <span dir="rtl"><a href="/sections/3enkfe3nena.html">مبادرة عينك في عنينا</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-1.html">مبادرة عينك في عنينا</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
 
@@ -3668,7 +3668,7 @@
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title" style="margin-top:5%;">
                                                                                                                                                 <!-- el link ghalat me7tag yetghyar -->
-                                                                                                                                                <span dir="rtl"><a href="/sections/7aya.html">مبادرة حياة</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-5.html">مبادرة حياة</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
 
@@ -3701,7 +3701,7 @@
                                                                                                                                         </div>
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title" style="margin-top:5%;">
-                                                                                                                                                <span dir="rtl"><a href="/sections/mrakeb.html">مبادرة مراكب رزق</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-6.html">مبادرة مراكب رزق</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
                                                                                                                                     </div>
@@ -3716,7 +3716,7 @@
                                                                                                                                         </div>
                                                                                                                                         <div class="elementor-icon-box-content">
                                                                                                                                             <h3 class="elementor-icon-box-title" style="margin-top:5%;">
-                                                                                                                                                <span dir="rtl"><a href="/sections/7aya.html">مبادرة نبض حياة</a></span>
+                                                                                                                                                <span dir="rtl"><a href="/sections/initiative-5.html">مبادرة نبض حياة</a></span>
                                                                                                                                             </h3>
                                                                                                                                         </div>
                                                                                                                                     </div>
