--- a/sections/economy.html
+++ b/sections/economy.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
-<link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
@@ -2399,7 +2399,7 @@
                                                                                                     لصالح اهالي قرية المنصورية مركز دراو بأسوان احد اشد قرى اسوان احتياجا واحدي اكثر القرى التى تتعرض لموجات السيول وبحضور وزيرة التضامن الاجتماعي قامت صناع
                                                                                                     الخير بتزويد 30 من عوائل الاسر الاشد احتياج مشروعات مراكب صيد ومن اقصى الجنوب الى قلب دلتا مصر مركز شربين بمحافظة الدقهلية حيث قامت صناع الخير بتسليم 30
                                                                                                     من أهالي قرية بساط كريم الدين مراكب صيد حديثة مع انشاء ثلاجة بالقرية لحفظ الاسماك
-                                                                                                </p> <a class="give-card button-dark give-card__link" href="mrakeb.html"><i
+                                                                                                </p> <a class="give-card button-dark give-card__link" href="initiative-6.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
