--- a/sections/community.html
+++ b/sections/community.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
-<link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
@@ -2326,14 +2326,14 @@
                                                                                         <div class="give-card__body" dir="rtl">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">بيتي
+                                                                                                    <a href="bity-u7meni.html">بيتي
                                                                                                         يحميني
                                                                                                     </a>
                                                                                                 </h3>
                                                                                                 <p class="give-card__text" style="text-align: right;">
                                                                                                     إعادة الإعمار التي تتضمن خلق بيئة معيشية كريمة للأهالي من خلال هدم وإعادة بناء المساكن المتهالكة، وترميم جدران، وعمل أسقف وحمام ومطبخ وسيراميك أرضيات ودهانات وباب وشباك. أُطْلِقَتْ المبادرة بشكل فعلي وبدأت خطوات عملها من خ ال إعادة إعمار قريتي الجزائر
                                                                                                     مركز الخارجة، وجورمشين مركز باريس بمحافظة الوادي الجديد &hellip;
-                                                                                                </p> <a class="give-card button-dark give-card__link" href="bity-u7meni.html"><i
+                                                                                                </p> <a class="give-card button-dark give-card__link" href="../donate.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
@@ -2385,7 +2385,7 @@
                                                                                         <div class="give-card__body">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">توصيل
+                                                                                                    <a href="twsil-clean-water.html">توصيل
                                                                                                         مياه نقية
                                                                                                         للمنازل(حملة
                                                                                                         شريان الحياة)
@@ -2394,7 +2394,7 @@
                                                                                                 <p class="give-card__text" style="text-align: right;">
                                                                                                     تركيب وصلات مياه نقية للمنازل في بعض القرى والنجوع الأكثر احتياجًا.
 
-                                                                                                </p> <a class="give-card button-dark give-card__link" href="twsil-clean-water.html"><i
+                                                                                                </p> <a class="give-card button-dark give-card__link" href="../donate.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
