--- a/sections/help.html
+++ b/sections/help.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
-<link rel="stylesheet" href="font.css">
+    <link rel="stylesheet" href="font.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <link rel="profile" href="http://gmpg.org/xfn/11">
@@ -2326,7 +2326,7 @@
                                                                                         <div class="give-card__body" dir="rtl">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">مبادرة
+                                                                                                    <a href="7maya.html">مبادرة
                                                                                                         حماية
                                                                                                     </a>
                                                                                                 </h3>
@@ -2385,7 +2385,7 @@
                                                                                         <div class="give-card__body">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">
+                                                                                                    <a href="qtar.html">
                                                                                                         مبادرة قطار
                                                                                                         الخير</a>
                                                                                                 </h3>
@@ -2446,11 +2446,11 @@
                                                                                         <div class="give-card__body">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">مبادرة
+                                                                                                    <a href="qary-elamal.html">مبادرة
                                                                                                         قرى الأمل</a>
                                                                                                 </h3>
                                                                                                 <p class="give-card__text" style="text-align: right;" dir="rtl">التطوير شمل إعادة إعمار المنازل المتهالكة، وتحسين المستوى المعيشي للأسر بتوفير مشروعات تنموية صغيرة...
-                                                                                                </p> <a class="give-card button-dark give-card__link" href="qary-elamal.html"><i
+                                                                                                </p> <a class="give-card button-dark give-card__link" href="../donate.html"><i
                                                                                                         class="opal-icon-arrow-circle-right"></i>
                                                                                                     <span>تبرع
                                                                                                         الأن</span></a>
@@ -2503,7 +2503,7 @@
                                                                                         <div class="give-card__body">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">مبادرة
+                                                                                                    <a href="da3m-elmanatik.html">مبادرة
                                                                                                         دعم المناطق
                                                                                                         الحدودية
                                                                                                         المهمشة</a>
@@ -2563,7 +2563,7 @@
                                                                                         <div class="give-card__body">
                                                                                             <div class="give-card__meta">
                                                                                                 <h3 class="give-card__title" style="text-align: center;">
-                                                                                                    <a href="../donate.html">المركز
+                                                                                                    <a href="elmarkaz.html">المركز
                                                                                                         النموذجي برعاية
                                                                                                         المكفوفين
                                                                                                     </a>
